# AI_Infra

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  90_PERCENT_COVERAGE_ACHIEVED.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  CICD_SETUP.md  COMPREHENSIVE_TEST_COVERAGE_SUMMARY.md  E2E_TESTS_COMPLETE.md  ENV_VARIABLES.md  FINAL_TEST_ACHIEVEMENT_SUMMARY.md  FRONTEND_INTEGRATION.md  HOW_TO_RUN_TESTS.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  MAKEFILE_GUIDE.md  Makefile  NGINX_REDIRECT_FIX_COMPLETE.md  PUSH_INSTRUCTIONS_V2.0.0.md  PYTHON_3.14_TOO_NEW.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  QUICK_START_TESTING.sh  README.md  TESTING_SUCCESS_SUMMARY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  push-all-v2.0.0.sh  pytest.ini
.github/workflows/: ci.yml
docker/: README.md
docker/grafana/: grafana.ini
docker/keycloak/: README.md  ai-front-spa-client.json  keycloak.conf  realm-export.json
docker/python-service/: Dockerfile  pyproject.toml
docs/: SUBMODULES.md
frontend/: README.md
scripts/: add-frontend-client.sh  assign-user-groups.sh  assign-user-roles.sh  backup.sh  create-test-user.sh  debug-args.sh  dev-frontend.sh  fix-grafana-redirects.sh  list-keycloak-users.sh  logs.sh  populate-minio-test-data.sh  reset-grafana.sh  seed-data.sh  start.sh  stop.sh  test-keycloak.sh  update-frontend.sh  validate-keycloak.sh  validate-logging.sh  validate-minio-dashboard.sh  validate-prometheus.sh  verify-pgadmin.sh
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_grafana_redirect.py
(+113 files in other folders)
